suil (0.10.9) unstable;

  * Clean up minor code issues

 -- David Robillard <d@drobilla.net>  Tue, 15 Dec 2020 20:55:16 +0000

suil (0.10.8) stable;

  * Fix X11 in Gtk size regressions (thanks Robin Gareus)
  * Fix compilation on MacOS older than 10.12
  * Fix drag and drop for X11 in Gtk
  * Fix various minor warnings and other code quality issues

 -- David Robillard <d@drobilla.net>  Sun, 27 Sep 2020 12:22:08 +0000

suil (0.10.6) stable;

  * Add no-cocoa configure flag
  * Update build system

 -- David Robillard <d@drobilla.net>  Sun, 10 Nov 2019 21:35:59 +0000

suil (0.10.4) stable;

  * Add support for Qt5 in Gtk3
  * Add support for min/base size hints for X11 in Gtk (thanks Hermann Meyer)

 -- David Robillard <d@drobilla.net>  Thu, 06 Jun 2019 19:02:47 +0000

suil (0.10.2) stable;

  * Add support for Cocoa in Qt5
  * Fix resizing and add idle and update rate support for Qt5 in Gtk2
  * Fix various issues with Qt5 in Gtk2

 -- David Robillard <d@drobilla.net>  Thu, 20 Dec 2018 17:22:19 +0000

suil (0.10.0) stable;

  * Add suil_init() to support early initialization and passing any necessary
    information that may be needed in the future (thanks Stefan Westerfeld)
  * Add support for Qt5 in Gtk2
  * Add support for X11 in Gtk3
  * Fix building with X11 against custom LV2 install path (thanks Robin
    Gareus)
  * Fix minor memory errors

 -- David Robillard <d@drobilla.net>  Tue, 03 Oct 2017 20:11:49 +0000

suil (0.8.4) stable;

  * Add Cocoa in Gtk wrapper (patch from Robin Gareus)
  * Add Gtk2 and X11 in Qt5 wrappers (patch from Rui Nuno Capela)
  * Bubble X11 key events up to Gtk parent (patch from Filipe Coelho)
  * Center X11 UIs in Gtk (patch from Robin Gareus)
  * Configure based on compiler target OS for cross-compilation
  * Fix a few minor/unlikely memory errors
  * Fix compilation with -Wl,--no-undefined
  * Fix initial size of resizable X11 UIs in Gtk (patch from Robin Gareus)
  * Gracefully handle failure to open wrapper