@@ -16,7 +16,7 @@
 */
 
 #include "dylib.h"
-#include "suil_config.h"
+#include "suil_config.h" // IWYU pragma: keep
 #include "suil_internal.h"
 
 #include "lv2/core/lv2.h"
