@@ -1,8 +1,9 @@
 suil (0.10.9) unstable;
 
   * Clean up minor code issues
+  * Remove the need for a generated configuration header
 
- -- David Robillard <d@drobilla.net>  Tue, 15 Dec 2020 20:55:16 +0000
+ -- David Robillard <d@drobilla.net>  Fri, 01 Jan 2021 18:03:42 +0000
 
 suil (0.10.8) stable;
 
